--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-title: Freelancer
+title: BnB Mobile Detailing
 email: bnbcardetailing@gmail.com
 contactformurl: https://formspree.io/f/xjkbvqeo
 url: https://github.com/jeromelachaud/freelancer-theme
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 keywords: "your keywords, separated by commas"
-skills: "Web Developer - Graphic Artist - User Experience Designer"
+skills: "Profesional Mobile Detailing - Top Notch Service and Products"
 meta_author: LastName FirstName
 
 # Google webmaster tools
@@ -26,9 +26,9 @@ disqus_shortname: myshortname
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: 18bc9c #80B3FF
+  primary: 080808 #80B3FF
   primary-rgb: "24,288,156" #"128,179,255"
-  secondary: 2c3e50 #FD6E8A
+  secondary: 888888 #FD6E8A
   secondary-dark: 233140 #A2122F
 
 # Footer settings
